2013-11-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/boot/i386/pc/boot.S: Fix floppy probe. Due to missing
	%dx restore the probe worked on non-existant drive. Reorganize the
	code a little bit to free 2 bytes necessary for push/pop.

2013-11-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/mips/arc/init.c (grub_machine_get_bootlocation):
	Add missing cast to silence warning.

2013-11-23  Keshav Padram Amburay <the.ridikulus.rat@gmail.com>

	* util/grub-install.c (update_nvram): Support --no-nvram flag
	for EFI targets.

2013-11-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* INSTALL: Add note about sparc64/ia64 with clang (unsupported).

2013-11-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/garbage-gen.c: Add missing include of sys/time.h.

2013-11-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Don't add -mflush-func if it's not supported by compiler.

2013-11-23  Vladimir Serbinenko  <phcoder@gmail.com>

	Move common BIOS/coreboot memory map declarations to
	include/grub/i386/memory_raw.h and eliminate duplicate declarations.

2013-11-22  Andrey Borzenkov <arvidjaar@gmail.com>

	* Makefile.am: Add util/garbage-gen.c to EXTRA_DIST.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* INSTALL: Document why older clang versions aren't appropriate.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* INSTALL: Document about clang for mips.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/libgcrypt/mpi/longlong.h: Use C version with mips
	clang.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Add *-xen to the list of grub-install-common platforms.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Do not enforce -mcmodel=large. It's not necessarry with
	3 last commits.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/xen/init.c: Do not map more pages than we can address.

2013-11-22  Vladimir Serbinenko  <phcoder@gmail.com>
