@@ -1,5 +1,9 @@
 2013-11-24  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/term/arc/console.c: Add missing cast to silence warning.
+
+2013-11-24  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* grub-core/boot/i386/pc/boot.S: Fix floppy probe. Due to missing
 	%dx restore the probe worked on non-existant drive. Reorganize the
 	code a little bit to free 2 bytes necessary for push/pop.
